--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
   "devDependencies": {
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Harry-2112/Prueva-Api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Harry-2112/Prueva-Api/issues"
+  },
+  "homepage": "https://github.com/Harry-2112/Prueva-Api#readme"
 }
